# torudo

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: app_state.rs  claude.rs  crmux.rs  event_handler.rs  file_watcher.rs  help.rs  main.rs  mcp_server.rs  md_preview.rs  rpc_client.rs  rpc_server.rs  setup.rs  templates.rs  todo.rs  ui.rs  update.rs  url.rs
tests/: inbox_add.rs
