[package]
name = "torudo"
version = "0.3.0"
edition = "2021"
authors = ["maedana"]
description = "A terminal-based todo.txt viewer and manager with TUI interface"
homepage = "https://github.com/maedana/torudo"
repository = "https://github.com/maedana/torudo"
license = "MIT"
keywords = ["todo", "tui", "terminal", "todotxt"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[[bin]]
name = "torudo"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
notify = "6.0"
clap = { version = "4.0", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.10"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
